# raytracer

./: CMakeLists.txt  README.md  out.ppm
src/: camera.h  hittable.h  main.cpp  plane.h  ray.h  scene.h  sphere.h  vec3.h
